--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "my-razzle-app",
+  "name": "utopia-gmx-backend-by-prince",
   "version": "4.0.5",
   "license": "MIT",
   "scripts": {
-    "build:prod": "PORT=8080 razzle build --noninteractive",
+    "build:prod": "razzle build --noninteractive",
     "build:dev": "razzle build --noninteractive",
     "build-upload": "razzle build --noninteractive && tar -zcvf build.tar.gz build && scp build.tar.gz do2:~/www/gmx-stats",
     "test": "razzle test --env=jsdom",
     "start": "razzle start",
     "start:prod": "node build/server.js",
+    "start-server": "npx pm2 start ./build/server.js --name utopia-gmx-backend-by-prince",
     "lint": "eslint $(git ls-files -m | grep -E \".js$\")",
     "pre-commit": "npm run lint"
   },
@@ -32,6 +33,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.29.1",
     "object-sizeof": "^1.6.1",
+    "pm2": "^5.3.0",
     "prop-types": "^15.8.1",
     "razzle": "^4.2.14",
     "razzle-dev-utils": "^4.2.14",
